# botdiscord

./: .replit  keep_alive.py  main.py  pyproject.toml  tickets.db  transcript-ticket-1.txt
