[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = ["nico nico <41683493-casellanicola9@users.noreply.replit.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord-py = "2.5.2"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
